--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --font-family: 'Manrope', sans-serif;
+
+    --gradient-text: linear-gradient(89.97deg, #530E1A 1.84%, #af5963 102.67%);
+    --gradient-bar: linear-gradient(103.22deg, #530E1A -13.86%, #af5963 99.55%);
+
+    --color-bg: #C1C6BF;
+    --color-footer: #031B34;
+    --color-blog: #042c54;
+    --color-text: #530E1A;
+    --color-subtext: #FF8A71;
+
+    --color-red: #530E1A;
+    --color-redhover: #8c2436;
+    --color-white: #C1C6BF;
+    --color-whitehover: #BEBD7E;
 }
