added projexts and some minor fixes to other areas

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
     --font-family: 'Manrope', sans-serif;
 
     --gradient-text: linear-gradient(89.97deg, #530E1A 1.84%, #af5963 102.67%);
+    --gradient-text2: linear-gradient(121.57deg, #FFFFFF 18.77%, #d8bfbf 60.15%);
+
     --gradient-bar: linear-gradient(103.22deg, #530E1A -13.86%, #af5963 99.55%);
 
     --color-bg: #C1C6BF;
