--- a/src/containers/Projects/projects.css
+++ b/src/containers/Projects/projects.css
@@ -1,3 +1,4 @@
+/* ----- Projects Section ----- */
 .app__projects {
     display: flex;
     flex-direction: column;
@@ -23,6 +24,14 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.app__projects-divider {
+    width: 64px;
+    height: 6px;
+    border-radius: 10px;
+    background: var(--gradient-text2);
+}
+
+/* ----- "Projects" at top of section - NOT OF EACH PROJ ----- */
 .app__projects-title {
     font-weight: 800;
     font-size: 56px;
@@ -37,6 +46,7 @@
     margin-bottom: 16px;
 }
 
+/* ----- Grid Layout of Projects  ----- */
 .app__projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
@@ -46,6 +56,7 @@
     row-gap: 3rem;
 }
 
+/* ----- Layout for Each Project's Card ----- */
 .app__projects-card {
     border-radius: 10px;
     box-shadow: 3px 3px 20px rgba(80, 78, 78, 0.5);
@@ -53,6 +64,7 @@
     width: 400px;
 }
 
+/* ----- Project Image ----- */
 .app__projects-card img {
     width: 100%;
     height: 100%;
@@ -60,13 +72,14 @@
     overflow: hidden;
 }
 
-
+/* ----- Project Title Area ----- */
 .app__projects-card-title_area {
     text-align: center;
     z-index: 20;
     width: 100%;
 }
 
+/* ----- Project Title ----- */
 .app__projects-card-title {
     font-family: var(--font-family);
     font-size: 2rem;
@@ -76,6 +89,7 @@
     padding: .5rem 0;
 }
 
+/* ----- Project Line Break ----- */
 .app__projects-card_hr {
     width: 50px;
     height: 3px;
@@ -84,19 +98,24 @@
     background: #d0bb57;
 }
 
+/* ----- Project Description ----- */
 .app__projects-card-info {
-    font-weight: 500;
-    letter-spacing: 2px;
-    color: #9cc9e3;
-    padding: .5rem 0;
+    width: 100%;
+    padding: 0 50px;
+    color: #e4e6e7;
+    font-style: 2rem;
+    line-height: 24px;
+    text-align: justify;
 }
 
+/* ----- STACK (title) ----- */
 .app__projects-card_footer-title {
     text-align: center;
     z-index: 20;
     width: 100%;
 }
 
+/* ----- Project Tech Tag Section ----- */
 .app__projects-card_footer-taglist {
     display: flex;
     flex-wrap: wrap;
@@ -106,11 +125,13 @@
     padding: 2rem;
 }
 
+/* ----- Project Tech Tags ----- */
 .app__projects-card_footer-tag {
     color: #d8bfbf;
     font-size: 1.5rem;
 }
 
+/* ----- Project Button Area ----- */
 .app__projects-card_utility-list {
     list-style-type: none;
     padding: 0;
@@ -119,6 +140,7 @@
     margin: 2.5rem 0;
 }
 
+/* ----- Project Button ----- */
 .app__projects-card_utility-list_code {
     color: #d4c0c0;
     font-size: 1.6rem;
@@ -128,6 +150,62 @@
     transition: 0.5s;
 }
 
-. app__projects-card_utility-list_code:hover {
+.app__projects-card_utility-list_code:hover {
     background: #801414;
+}
+
+@media screen and (max-width: 1280) {}
+
+@media screen and (max-width: 1024) {}
+
+@media screen and (max-width: 768) {
+    .app__projects {
+        padding: 24px 48px 0;
+        flex-direction: column;
+    }
+
+    .app__projects-divider {
+        width: 48px;
+        height: 4px;
+    }
+
+    .app__projects-title {
+        font-size: 48px;
+        line-height: 48px;
+        margin-bottom: 12px;
+    }
+}
+
+@media screen and (max-width: 640) {
+    .app__projects {
+        width: calc(100vw - 32px);
+        flex-direction: column;
+    }
+
+    .app__projects-divider {
+        width: 32px;
+        height: 2px;
+    }
+
+    .app__projects-title {
+        font-size: 32px;
+        line-height: 40px;
+        margin-bottom: 8px;
+        max-width: 100%;
+    }
+
+    .app__projects-grid {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+        padding-bottom: 0;
+    }
+
+    .app__projects-card {
+        width: 100%;
+    }
+
+    .app__projects-card-info {
+        padding: 0.3rem;
+    }
 }
