--- a/src/containers/Projects/projects.css
+++ b/src/containers/Projects/projects.css
@@ -2,8 +2,13 @@
 .app__projects {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding: 2rem;
+    margin: 0 auto;
+
+    max-width: 1040px;
+    box-sizing: content-box;
+    position: relative;
+    overflow: hidden;
+    grid-template-columns: 1fr 1fr;
     background: var(--color-footer);
 
     /* ff 3.6+ */
@@ -63,13 +68,14 @@
     border-radius: 10px;
     box-shadow: 3px 3px 20px rgba(80, 78, 78, 0.5);
     text-align: center;
+
 }
 
 /* ----- Project Image ----- */
 .app__projects-card img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: scale-down;
     overflow: hidden;
 }
 
@@ -199,7 +205,7 @@
     .app__projects-grid {
         display: flex;
         flex-direction: column;
-        padding: 2rem;
+        padding: 0.5rem;
         padding-bottom: 0;
     }
 
