--- a/src/containers/Projects/projects.css
+++ b/src/containers/Projects/projects.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-
+    margin-bottom: -5rem;
     max-width: 1040px;
     box-sizing: content-box;
     position: relative;
@@ -32,6 +32,8 @@
 .app__projects-divider {
     width: 64px;
     height: 6px;
+    margin-top: 1rem;
+    margin-left: 1rem;
     border-radius: 10px;
     background: var(--gradient-text2);
 }
@@ -49,6 +51,7 @@
 
     padding: 0;
     margin-bottom: 16px;
+    margin-left: 1rem;
 }
 
 /* ----- Grid Layout of Projects  ----- */
@@ -61,6 +64,7 @@
     row-gap: 3rem; */
     grid-gap: 2rem;
     width: 100%;
+   
 }
 
 /* ----- Layout for Each Project's Card ----- */
