--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body::-webkit-scrollbar {
 }
 
 body {
+
     /* background-color: var(--color-bg); */
     /* ff 3.6+ */
     background: -moz-radial-gradient(circle at 30% -100%, #cdb252 25%, rgb(84, 52, 4) 85%, #530E1A 100%);
@@ -30,7 +31,10 @@ body {
 
 }
 
-
+html,
+body {
+    width: 100vw;
+}
 
 a {
     color: unset;
@@ -67,12 +71,13 @@ a {
     padding: 4rem 6rem;
 }
 
-.section__pmargin {
+.section__margin {
     margin: 4rem 6rem;
 }
 
 .techfooter {
     background: var(--color-bg);
+    width: 100vw;
 }
 
 @media screen and (max-width: 700px) {
