--- a/src/containers/Footer/footer.css
+++ b/src/containers/Footer/footer.css
@@ -1,5 +1,6 @@
 .app__footer {
-    width: calc(100vw - 96px);
+    /* width: calc(100vw - 96px); */
+    width: 100vw;
     max-width: 1040px;
     padding: 2rem 48px 40px;
     margin: 1rem auto;
