--- a/src/containers/Navbar/navbar.css
+++ b/src/containers/Navbar/navbar.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     padding: 2rem 6rem;
 }
+/* width: 100vw; */
 
 .app__navbar-links {
     flex: 1;
@@ -31,15 +31,17 @@
     width: 50px;
     height: 50px;
 }
-.app__navbar-links_name{
+
+.app__navbar-links_name {
     color: var(--color-red);
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 27px;
     line-height: 38px;
-    
+
     margin-right: 2rem;
 }
+
 .app__navbar-links_container p,
 .app__navbar-sign p,
 .app__navbar-menu_container p,
