--- a/src/containers/Projects/projects.css
+++ b/src/containers/Projects/projects.css
@@ -6,11 +6,12 @@
     margin-bottom: -5rem;
     max-width: 1040px;
     box-sizing: content-box;
+    /* width: 100vw; */
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     grid-template-columns: 1fr 1fr;
     background: var(--color-footer);
-
+    padding: 0;
     /* ff 3.6+ */
     background: -moz-radial-gradient(circle at 30% -100%, #cdb252 25%, rgb(84, 52, 4) 85%, #530E1A 100%);
 
@@ -60,11 +61,11 @@
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     padding: 3rem;
     place-items: center;
-    /* column-gap: 2rem;
-    row-gap: 3rem; */
-    grid-gap: 2rem;
-    width: 100%;
-   
+    column-gap: 2rem;
+    row-gap: 3rem;
+    /* grid-gap: 2rem; */
+    /* width: 100%; */
+
 }
 
 /* ----- Layout for Each Project's Card ----- */
@@ -72,7 +73,7 @@
     border-radius: 10px;
     box-shadow: 3px 3px 20px rgba(80, 78, 78, 0.5);
     text-align: center;
-
+    width: 400px;
 }
 
 /* ----- Project Image ----- */
@@ -190,7 +191,7 @@
 @media screen and (min-width: 640) {
     .app__projects {
 
-        width: 100%;
+        width: 100vw;
 
     }
 
