--- a/src/containers/Header/header.css
+++ b/src/containers/Header/header.css
@@ -51,71 +51,76 @@
     height: 100%;
 }
 
-@media screen and (max-width: 1050px) {
-    .app__header {
-        flex-direction: column;
+@media screen and (min-width: 1200px) {
+    .app__header-image {
+        flex: 0.75;
     }
 
-    .app__header-content {
-        margin: 0 0 3rem;
+    @media screen and (max-width: 1050px) {
+        .app__header {
+            flex-direction: column;
+        }
+
+        .app__header-content {
+            margin: 0 0 3rem;
+        }
+
+        .app__header-image img {
+            border-radius: 50%;
+            width: 70%;
+            height: 70%;
+        }
     }
 
-    .app__header-image img {
-        border-radius: 50%;
-        width: 70%;
-        height: 70%;
-    }
-}
+    @media screen and (max-width: 700px) {
+        .app__heading {
+            padding: 2rem 4rem;
+        }
 
-@media screen and (max-width: 700px) {
-    .app__heading {
-        padding: 2rem 4rem;
-    }
+        .app__header-content h1 {
+            font-size: 48px;
+            line-height: 60px;
+            text-align: center;
+            padding-bottom: 2rem;
+        }
 
-    .app__header-content h1 {
-        font-size: 48px;
-        line-height: 60px;
-        text-align: center;
-        padding-bottom: 2rem;
-    }
+        .app__header p {
+            font-size: 16px;
+            line-height: 24px;
+        }
 
-    .app__header p {
-        font-size: 16px;
-        line-height: 24px;
-    }
-
-    .app__header-image img {
-        border-radius: 50%;
-        width: 100%;
-        height: 100%;
-    }
-}
-
-@media screen and (max-width: 550px) {
-    .app__navbar {
-        padding: 2rem;
+        .app__header-image img {
+            border-radius: 50%;
+            width: 100%;
+            height: 100%;
+        }
     }
 
-    .app__navbar-menu_container {
-        top: 20px;
+    @media screen and (max-width: 550px) {
+        .app__navbar {
+            padding: 2rem;
+        }
+
+        .app__navbar-menu_container {
+            top: 20px;
+        }
+
     }
 
-}
+    @media screen and (max-width: 490px) {
+        .app__header h1 {
+            font-size: 36px;
+            line-height: 48px;
+        }
 
-@media screen and (max-width: 490px) {
-    .app__header h1 {
-        font-size: 36px;
-        line-height: 48px;
-    }
+        .app__header p {
+            font-size: 14px;
+            line-height: 24px;
+        }
 
-    .app__header p {
-        font-size: 14px;
-        line-height: 24px;
+        .app__header-content__input input,
+        .app__header-content__input button {
+            font-size: 12px;
+            line-height: 16px;
+        }
     }
-
-    .app__header-content__input input,
-    .app__header-content__input button {
-        font-size: 12px;
-        line-height: 16px;
-    }
-}
