--- a/src/containers/Tech/tech.css
+++ b/src/containers/Tech/tech.css
@@ -1,7 +1,7 @@
 .app__tech {
     display: flex;
     flex-direction: column;
-    padding: 32px 48px 0;
+    padding: 0;
     margin: 0 auto;
     max-width: 1040px;
     box-sizing: content-box;
@@ -9,7 +9,7 @@
     overflow: hidden;
     grid-template-columns: 1fr 1fr;
 
-    width: 100vw;
+    /* width: 100vw; */
 }
 
 .app__tech-divider {
@@ -49,7 +49,8 @@
     gap: 40px;
 
     margin: 3rem 0;
-
+margin-left: auto;
+margin-right: auto;
 }
 
 .app__tech-list-item {
