--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,6 @@ body {
 
 }
 
-html,
-body {
-    width: 100vw;
-}
 
 a {
     color: unset;
@@ -77,7 +73,30 @@ a {
 
 .techfooter {
     background: var(--color-bg);
-    width: 100vw;
+}
+
+@-webkit-keyframes scale-up-center {
+    0% {
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes scale-up-center {
+    0% {
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
 }
 
 @media screen and (max-width: 700px) {
