--- a/src/containers/Footer/footer.css
+++ b/src/containers/Footer/footer.css
@@ -134,13 +134,13 @@
 
 @media screen and (max-width: 640) {
     .app__footer {
-        padding: 0 16px 48px;
+        padding: 0;
         width: calc(100vw - 32px);
     }
 
     .app__footer-list {
         width: 100%;
-        padding: 32px 4px 16px;
+        padding: 0;
         gap: 5px;
     }
 
@@ -167,7 +167,7 @@
     .app__footer-slogan_container {
         display: flex;
         flex-direction: column;
-        margin: 0 0 32px;
+        /* margin: 0 0 32px; */
         align-items: center;
     }
 
