--- a/src/containers/Navbar/navbar.css
+++ b/src/containers/Navbar/navbar.css
@@ -4,6 +4,7 @@
     align-items: center;
     padding: 2rem 6rem;
 }
+
 /* width: 100vw; */
 
 .app__navbar-links {
@@ -13,6 +14,19 @@
     align-items: center;
 }
 
+
+.app__navbar-links_name {
+    margin-right: 2rem;
+}
+
+.app__navbar-links_name p {
+    color: var(--color-red);
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 27px;
+    line-height: 38px;
+}
+
 .app__navbar-links_container {
     display: flex;
     flex-direction: row;
@@ -20,6 +34,7 @@
 
 .app__navbar-icon {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
 }
 
@@ -32,15 +47,6 @@
     height: 50px;
 }
 
-.app__navbar-links_name {
-    color: var(--color-red);
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 27px;
-    line-height: 38px;
-
-    margin-right: 2rem;
-}
 
 .app__navbar-links_container p,
 .app__navbar-sign p,
@@ -67,6 +73,28 @@
 .app__navbar-menu svg {
     cursor: pointer;
 }
+.app__navbar-menu_container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+
+    text-align: end;
+    background: var(--color-bg);
+    padding: 2rem;
+    position: absolute;
+    right: 0;
+    top: 40px;
+    margin-top: 1rem;
+    min-width: 210px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.app__navbar-menu_container p {
+    margin: 1rem 0;
+}
+
 
 @media screen and (max-width: 1050px) {
     .app__navbar-links_container {
