--- a/src/containers/Tech/tech.css
+++ b/src/containers/Tech/tech.css
@@ -8,8 +8,6 @@
     position: relative;
     overflow: hidden;
     grid-template-columns: 1fr 1fr;
-
-    /* width: 100vw; */
 }
 
 .app__tech-divider {
@@ -17,7 +15,8 @@
     height: 6px;
     border-radius: 10px;
     background: var(--gradient-bar);
-    margin-top: 5rem;
+    margin-top: 10rem;
+
 }
 
 .app__tech-title {
@@ -49,8 +48,8 @@
     gap: 40px;
 
     margin: 3rem 0;
-margin-left: auto;
-margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .app__tech-list-item {
@@ -91,7 +90,7 @@ margin-right: auto;
 @media screen and (max-width: 768) {
     .app__tech {
         padding: 0;
-        flex-direction: column;
+        /* flex-direction: column; */
     }
 
     .app__tech-divider {
@@ -103,6 +102,7 @@ margin-right: auto;
         font-size: '48px';
         line-height: '48px';
         margin-bottom: 12px;
+        padding: 0;
     }
 
     .app__tech-text {
@@ -148,8 +148,8 @@ margin-right: auto;
     .app__tech-title {
         font-size: 32px;
         line-height: 40px;
-        font-size: '32px';
-        line-height: '40px';
+        font-size: 32px;
+        line-height: 40px;
         margin-bottom: 8px;
         max-width: 100%;
     }
