--- a/src/containers/Footer/footer.css
+++ b/src/containers/Footer/footer.css
@@ -1,8 +1,7 @@
 .app__footer {
-    /* width: calc(100vw - 96px); */
-    width: 100vw;
+    width: calc(100vw - 96px);
     max-width: 1040px;
-    padding: 0;
+    padding: 2rem 48px 40px;
     margin: 1rem auto;
     box-sizing: content-box;
 }
@@ -92,14 +91,14 @@
 
 @media screen and (max-width: 1024) {
     .app__footer-list {
-        /* padding: 32px 0 16px 5px; */
+        padding: 32px 0 16px 5px;
     }
 }
 
 @media screen and (max-width: 768) {
     .app__footer-list {
         width: 100%;
-        /* padding: 32px 0 16px 5px; */
+        padding: 32px 0 16px 5px;
         gap: 16px;
     }
 
@@ -134,13 +133,13 @@
 
 @media screen and (max-width: 640) {
     .app__footer {
-        padding: 0;
+        padding: 0 16px 48px;
         width: calc(100vw - 32px);
     }
 
     .app__footer-list {
         width: 100%;
-        padding: 0;
+		padding: 32px 4px 16px;
         gap: 5px;
     }
 
@@ -167,7 +166,7 @@
     .app__footer-slogan_container {
         display: flex;
         flex-direction: column;
-        /* margin: 0 0 32px; */
+        margin: 0 0 32px;
         align-items: center;
     }
 
