--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,36 @@
 * {
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
-
+    padding: 0;
+  }
+  html {
+    font-size: 62.5%;
     scroll-behavior: smooth;
 
-}
-
+  }
 body::-webkit-scrollbar {
     display: none;
 }
 
 body {
-
-    /* background-color: var(--color-bg); */
+    
+   font-family: var(--font-family);
+   cursor: default;
     /* ff 3.6+ */
     background: -moz-radial-gradient(circle at 30% -100%, #cdb252 25%, rgb(84, 52, 4) 85%, #530E1A 100%);
-
+    
     /* safari 5.1+,chrome 10+ */
     background: -webkit-radial-gradient(circle at 30% -100%, #cdb252 25%, rgba(84, 52, 4) 85%, #530E1A 100%);
-
+    
     /* opera 11.10+ */
     background: -o-radial-gradient(circle at 30% -100%, #cdb252 25%, rgba(84, 52, 4, 1) 85%, #530E1A 100%);
-
+    
     /* ie 10+ */
     background: -ms-radial-gradient(circle at 30% -100%, #cdb252 25%, rgba(84, 52, 4, 1) 85%, #530E1A 100%);
-
+    
     /* global 92%+ browsers support */
     background: radial-gradient(circle at 30% -100%, #cdb252 25%, rgba(84, 52, 4, 1) 85%, #530E1A 100%);
-
+    
 }
 
 
@@ -38,22 +40,22 @@ a {
 }
 
 .gradient__bg {
-
+    
     /* ff 3.6+ */
     background: -moz-radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-
+    
     /* safari 5.1+,chrome 10+ */
     background: -webkit-radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-
+    
     /* opera 11.10+ */
     background: -o-radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-
+    
     /* ie 10+ */
     background: -ms-radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-
+    
     /* global 92%+ browsers support */
     background: radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-
+    
 }
 
 .gradient__text {
@@ -80,7 +82,7 @@ a {
         -webkit-transform: scale(0.5);
         transform: scale(0.5);
     }
-
+    
     100% {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -92,7 +94,7 @@ a {
         -webkit-transform: scale(0.5);
         transform: scale(0.5);
     }
-
+    
     100% {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -103,7 +105,7 @@ a {
     .section__padding {
         padding: 4rem;
     }
-
+    
     .section__margin {
         margin: 4rem;
     }
@@ -113,8 +115,16 @@ a {
     .section__padding {
         padding: 4rem 2rem;
     }
-
+    
     .section__margin {
         margin: 4rem 2rem;
     }
 }
+/* * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+
+    scroll-behavior: smooth;
+
+} */
