--- a/src/containers/Footer/footer.css
+++ b/src/containers/Footer/footer.css
@@ -4,7 +4,7 @@
     padding: 2rem 48px 40px;
     margin: 1rem auto;
     box-sizing: content-box;
-  
+
 }
 
 .app__footer-list {
@@ -111,7 +111,7 @@
     }
 
     .app__footer-icon_container {
-        /* display: flex; */
+        display: flex;
         flex-direction: column;
         /* justify-content: space-between; */
     }
@@ -163,7 +163,7 @@
 
     .app__footer-icon_container {
         display: flex;
-        flex-direction: column; 
+        flex-direction: column;
         /* width: 100%; */
     }
 
