--- a/src/containers/Header/header.css
+++ b/src/containers/Header/header.css
@@ -86,6 +86,8 @@
     }
 
     .app__header-image img {
+
+        border: 9px solid var(--color-red);
         border-radius: 50%;
         width: 100%;
         height: 100%;
@@ -101,9 +103,6 @@
         top: 20px;
     }
 
-}
-
-@media screen and (max-width: 490px) {
     .app__header-content h1 {
         font-size: 36px;
         line-height: 48px;
@@ -114,4 +113,7 @@
         line-height: 24px;
     }
 
+    .app__header-image img {
+        border: 6px solid var(--color-red);
+    }
 }
