fixed footer a bit

--- a/src/App.css
+++ b/src/App.css
@@ -2,35 +2,39 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  }
-  html {
+}
+
+html {
     font-size: 62.5%;
     scroll-behavior: smooth;
 
-  }
+}
+
 body::-webkit-scrollbar {
     display: none;
 }
 
+
+
 body {
-    
-   font-family: var(--font-family);
-   cursor: default;
+    margin: 0;
+    font-family: var(--font-family);
+    cursor: default;
     /* ff 3.6+ */
     background: -moz-radial-gradient(circle at 30% -100%, #cdb252 25%, rgb(84, 52, 4) 85%, #530E1A 100%);
-    
+
     /* safari 5.1+,chrome 10+ */
     background: -webkit-radial-gradient(circle at 30% -100%, #cdb252 25%, rgba(84, 52, 4) 85%, #530E1A 100%);
-    
+
     /* opera 11.10+ */
     background: -o-radial-gradient(circle at 30% -100%, #cdb252 25%, rgba(84, 52, 4, 1) 85%, #530E1A 100%);
-    
+
     /* ie 10+ */
     background: -ms-radial-gradient(circle at 30% -100%, #cdb252 25%, rgba(84, 52, 4, 1) 85%, #530E1A 100%);
-    
+
     /* global 92%+ browsers support */
     background: radial-gradient(circle at 30% -100%, #cdb252 25%, rgba(84, 52, 4, 1) 85%, #530E1A 100%);
-    
+
 }
 
 
@@ -40,22 +44,22 @@ a {
 }
 
 .gradient__bg {
-    
+
     /* ff 3.6+ */
     background: -moz-radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-    
+
     /* safari 5.1+,chrome 10+ */
     background: -webkit-radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-    
+
     /* opera 11.10+ */
     background: -o-radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-    
+
     /* ie 10+ */
     background: -ms-radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-    
+
     /* global 92%+ browsers support */
     background: radial-gradient(circle at 16% 26%, rgba(193, 198, 191, 1) 0%, rgba(190, 189, 126, 1) 100%);
-    
+
 }
 
 .gradient__text {
@@ -82,7 +86,7 @@ a {
         -webkit-transform: scale(0.5);
         transform: scale(0.5);
     }
-    
+
     100% {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -94,7 +98,7 @@ a {
         -webkit-transform: scale(0.5);
         transform: scale(0.5);
     }
-    
+
     100% {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -105,7 +109,7 @@ a {
     .section__padding {
         padding: 4rem;
     }
-    
+
     .section__margin {
         margin: 4rem;
     }
@@ -115,11 +119,12 @@ a {
     .section__padding {
         padding: 4rem 2rem;
     }
-    
+
     .section__margin {
         margin: 4rem 2rem;
     }
 }
+
 /* * {
     box-sizing: border-box;
     padding: 0;
