--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,12 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-
+/* div,
+section,
+img {
+    max-width: 100vw;
+    width: fit-content;
+} */
 
 body {
     margin: 0;
