--- a/src/containers/Footer/footer.css
+++ b/src/containers/Footer/footer.css
@@ -92,13 +92,13 @@
 
 @media screen and (max-width: 1280) {}
 
-@media screen and (max-width: 1024) {
+@media screen and (max-width: 1024px) {
     .app__footer-list {
         padding: 32px 0 16px 5px;
     }
 }
 
-@media screen and (max-width: 768) {
+@media screen and (max-width: 768px) {
     .app__footer-list {
         width: 100%;
         padding: 32px 0 16px 5px;
@@ -136,7 +136,7 @@
 
 }
 
-@media screen and (max-width: 640) {
+@media screen and (max-width: 640px) {
     .app__footer {
         padding: 0 16px 48px;
         width: calc(100vw - 32px);
@@ -155,7 +155,7 @@
     }
 
     .app__footer-list_col-item {
-        font-size: 8px;
+        font-size: 14px;
         line-height: 14px;
         margin-bottom: 8px;
         display: flex;
